--- a/moore-war/src/main/webapp/WEB-INF/web.xml
+++ b/moore-war/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,11 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
     <context-param>
+        <param-name>myparam</param-name>
+        <param-value>myactualpropertyvalue</param-value>
+    </context-param>
+
+    <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:/spring/appServlet/base-war-context.xml</param-value>
     </context-param>
